--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Welcome to My Git Demo!</h1>
     <p>This is a simple HTML file to test Git commands.</p>
-    <button onclick="sayHello()">Click Me</button>
+    <button onclick="sayHelasdfaslo()">Click Me</button>
 
     <script>
       function sayHello() {
