--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script>
       function sayHello() {
         alert("Hello from Git Demo!");
+        asdfasf;
       }
     </script>
   </body>
